docker-registry/02-docker-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-registry
  namespace: kube-system
  labels:
    k8s-app: kube-registry
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "KubeRegistry"
spec:
  type: NodePort
  selector:
    k8s-app: kube-registry
  ports:
    - name: registry
      port: 5000
      protocol: TCP
  # - name: registry
  #   port: 5000
  #   protocol: TCP
